# folioqpy

./: .gitignore  MANIFEST.in  Pipfile  README.md  app.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: checks.yml  codeql-analysis.yml
dash_pyfolio/: plotting.py  portfolio_data.py
docs/source/: conf.py  index.rst  modules.rst
examples/: app.py  example.ipynb
examples/assets/: base-styles.css
examples/components/: layout.py
examples/dash/first_app/: app.py
examples/dash/first_app/assets/: base-styles.css
examples/dash/first_app/components/: ids.py  layout.py  navbar.py
examples/notebooks/: example.ipynb  round_trip_tear_sheet_example.ipynb  sector_mappings_example.ipynb  single_stock_example.ipynb  slippage_example.ipynb
src/components/: ids.py  layout.py
src/components/base/: navbar.py
src/components/charts/: returns_chart.py
src/dash_pyfolio/: __init__.py  basic_components.py  plotting.py  portfolio_data.py  stats_summary.py  utils.py
src/dash_pyfolio/components/: __init__.py  ids.py  layout.py
src/dash_pyfolio/components/charts/: cumulative_returns_chart.py  drawdown_chart.py  monthly_returns_dist.py  returns_chart.py  returns_heatmap.py  rolling_volatility_chart.py
src/dash_pyfolio/plotting/: __init__.py  cumulative_returns.py  drawdown_table.py  drawdown_underwater.py  raw_returns.py  returns_distribution.py  returns_heatmap.py  rolling_volatility.py  stats_table.py
src/folioqpy/: __init__.py  basic_components.py  periods.py  portfolio_data.py  stats.py  stats_summary.py
src/folioqpy/plotting/: __init__.py  cumulative_returns.py  drawdown_underwater.py  raw_returns.py  returns_distribution.py  returns_heatmap.py  returns_quantiles.py  rolling_beta.py  rolling_sharpe.py  rolling_volatility.py  stats_table.py
src/folioqpy/stats/: __init__.py  qstats.py  utils.py  var.py
tests/: conftest.py  test_drawdown.py  test_dummy.py
tests/stats/: test_stats.py
