[options]
python_requires = >=3.9
include_package_data = True
packages = find_namespace:
package_dir =
    =src
install_requires =
    dash >= 2.6.1
    dash-bootstrap-components >= 1.2.1
    pandas >= 1.4.4
    plotly >= 5.10.0
    empyrical-reloaded >= 0.5.8

[options.packages.find]
where = src
exclude =
    test*

[tool:pytest]
testpaths = test
xfail_strict = True

[tox:tox]
envlist = py39,py310
isolated_build = True

[testenv]
deps =
    pytest
commands =
    pytest {posargs}

[testenv:format]
skip_install = True
deps =
    black
command =
    black {posargs:--check diff src test}

[testenv:lint]
skip_install = True
deps = 
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}