[options]
python_requires = >=3.9
include_package_data = True
packages = find_namespace:
package_dir =
    =src
install_requires =
    dash >= 2.6.1
    dash-bootstrap-components >= 1.2.1
    pandas >= 1.4.4
    plotly >= 5.10.0
    empyrical-reloaded >= 0.5.8
    toolz >= 0.12.0

[options.packages.find]
where = src
exclude =
    tests*

[tool:pytest]
testpaths = tests
xfail_strict = True

[tox:tox]
envlist = py39,py310
isolated_build = True

[testenv]
deps =
    pytest
commands =
    pytest {posargs}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps = 
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}

[flake8]
ignore = E501
exclude = .git,__pycache__,.venv,.pytest_cache

[testenv:docs]
deps =
    sphinx
    sphinx_rtd_theme
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/source/reference/ \
        # -o docs/source/ \
        src/dash_pyfolio/
    sphinx-build -n -W --keep-going -b html docs/source docs/build/html

[testenv:devdocs]
deps =
    sphinx
    sphinx_rtd_theme
    sphinx-autobuild
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/source/reference/ \
        # -o docs/source/ \
        src/dash_pyfolio/
    sphinx-autobuild -n -W -b html docs/source docs/build/html