[options]
python_requires = >=3.9
include_package_data = True
packages = find_namespace:
package_dir =
    =src
install_requires =
    dash >= 2.6.1
    dash-bootstrap-components >= 1.2.1
    pandas >= 1.4.4
    plotly >= 5.10.0
    toolz >= 0.12.0
    scipy >= 1.9.1

[options.packages.find]
where = src
exclude =
    tests*

[coverage:run]
omit=
    */__init__.py
    */periods.py

[tool:pytest]
addopts = --cov=folioqpy
testpaths = tests
xfail_strict = True

[tox:tox]
envlist = py39,py310
isolated_build = True

[testenv]
usedevelop = True
deps =
    pytest
    pytest-cov
commands =
    pytest --cov-report term  --cov-report=xml --cov-report=html:htmlcov

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps = 
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}

[flake8]
ignore = E501, E203, W503
exclude = .git,__pycache__,.venv,.pytest_cache

[testenv:docs]
deps =
    sphinx
    m2r2
    pydata-sphinx-theme
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/source/reference/ \
        src/folioqpy/
    sphinx-build -n -W --keep-going -b html docs/source docs/build/html

[testenv:devdocs]
deps =
    sphinx
    m2r2
    pydata-sphinx-theme
    sphinx-autobuild
commands =
    sphinx-apidoc \
        --force \
        --implicit-namespaces \
        --module-first \
        --separate \
        -o docs/source/reference/ \
        src/folioqpy/
    sphinx-autobuild -n -W -b html docs/source docs/build/html